# interview

./: Cargo.toml  README.md  SimpleRestaurantApi.md
application/: Cargo.toml  README.md
application/src/: database.rs  handler.rs  main.rs  model.rs
client/: Cargo.toml  README.md
client/src/: main.rs
